# AlgoViPrototype

./: CMakeLists.txt  README.md  build.py
externalLibs/: CMakeLists.txt
externalLibs/testlib/checkers/: CMakeLists.txt
source/: CMakeLists.txt  main.cpp
source/Controller/: CHintProvider.h  CSystemController.h  CTerminal.h  ITerminal.h  Types.h
source/Controller/private/: CHintProvider.cpp  CSystemController.cpp  CTerminal.cpp
source/Tools/classGenerator/: CClass.cpp.gen  CClass.h.gen  CProblemViz.cpp.gen  CProblemViz.h.gen  classGenerator.py  problemvizGenerator.py
source/View/: CGraphicView.cpp  CGraphicView.h  CMakeLists.txt  CViewerController.hhh  CVisualizationController.h
source/View/components/: CPoint.cpp  CPoint.h  IAlgoViItem.h  IGravizItem.h
source/View/components/private/: CPoint.cpp  IAlgoViItem.cpp  IGravizItem.cpp
source/View/private/: CViewerController.cpppp  CVisualizationController.cpp
source/View/problems/: CConvexHullViz.h  CCppScriptViz.h  CDistToCurveViz.h  CRouteSmootherViz.h  CSegmentCrossViz.h  IProblemVisualizer.h
source/View/problems/private/: CConvexHullViz.cpp  CCppScriptViz.cpp  CDistToCurveViz.cpp  CRouteSmootherViz.cpp  CSegmentCrossViz.cpp
source/algovi/: CAlgoViSystem.h  CCommandHandler.h  CMakeLists.txt  Types.h
source/algovi/private/: CAlgoViSystem.cpp  CCommandHandler.cpp
source/configs/: commandConfig.xml  solverConfig.xml  terminalConfig.xml  testConfig.xml
source/framework/: CMakeLists.txt
source/framework/Commands/: CFileSystem.h  CMakeLists.txt  ITerminalCommand.h
source/framework/Commands/ProblemSolver/: CCompilerHandler.h  CProblemSolver.h  CProblemTester.h  CProblemTesterInteractive.h  CTestCommand.h  CTestProvider.h  CTestValidator.h  CVisualSolver.h  CVisualSolverImpl.h  CVisualViewer.h
source/framework/Commands/ProblemSolver/ProblemParser/: CCodeforcesParser.h  IProblemParser.h
source/framework/Commands/ProblemSolver/ProblemParser/private/: CCodeforcesParser.cpp  IProblemParser.cpp
source/framework/Commands/ProblemSolver/checkers/: CCustomChecker.h  CInteractorChecker.h  CStraightForwardChecker.h  CTestLibChecker.h  IProblemChecker.h
source/framework/Commands/ProblemSolver/checkers/private/: CCustomChecker.cpp  CInteractorChecker.cpp  CStraightForwardChecker.cpp  CTestLibChecker.cpp  IProblemChecker.cpp
source/framework/Commands/ProblemSolver/private/: CCompilerHandler.cpp  CProblemSolver.cpp  CProblemTester.cpp  CProblemTesterInteractive.cpp  CTestCommand.cpp  CTestProvider.cpp  CTestValidator.cpp  CVisualSolver.cpp  CVisualSolverImpl.cpp  CVisualViewer.cpp
source/framework/Commands/common/: CQuestioner.h
source/framework/Commands/common/private/: CQuestioner.cpp
source/framework/Commands/private/: CFileSystem.cpp  ITerminalCommand.cpp
source/framework/Commands/system/: CCompiler.h  CSystemCmd.h
source/framework/Commands/system/private/: CCompiler.cpp  CSystemCmd.cpp
source/framework/SolverApps/: CMakeLists.txt  CSolverAppBase.h
source/framework/SolverApps/private/: CSolverAppBase.cpp
source/framework/algorithms/: CGeometry.h
source/framework/algorithms/private/: CGeometry.cpp
source/framework/settings/: CCommandSettings.h  CMakeLists.txt  CSolverSettings.h  CTerminalSettings.h  HelperFunctions.h
source/framework/settings/private/: CCommandSettings.cpp  CSolverSettings.cpp  CTerminalSettings.cpp
source/graviz/: CCommandHandler.h  CGravizSystem.h  Types.h
source/graviz/ProblemSolver/: CProblemCompiler.h  CProblemSolver.h  CSolverSettings.h
source/graviz/ProblemSolver/private/: CProblemCompiler.cpp  CProblemSolver.cpp  CSolverSettings.cpp
source/graviz/private/: CCommandHandler.cpp  CGravizSystem.cpp
source/graviz/settings/: CSolverSettings.h  HelperFunctions.h
source/gui/: CAlgoViWinMain.cpp  CAlgoViWinMain.h  CAlgoViWinMain.ui  CGravizWinMain.cpp  CGravizWinMain.h  CGravizWinMain.ui  CMakeLists.txt
