CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

PROJECT ( GraphicAlgoVizualizer )

SET ( INSTALL_BIN_DIR "bin" )
SET ( INSTALL_LIB_DIR "lib" )

SET ( CMAKE_AUTOMOC ON )
SET ( CMAKE_AUTOUIC ON )
SET ( CMAKE_INCLUDE_CURRENT_DIR ON )

FIND_PACKAGE ( Qt5Widgets REQUIRED )
FIND_PACKAGE ( Qt5Quick REQUIRED )
FIND_PACKAGE ( Qt5Core REQUIRED )
FIND_PACKAGE ( Qt5Network REQUIRED )
FIND_PACKAGE ( Boost REQUIRED COMPONENTS filesystem system program_options )

set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)

INCLUDE_DIRECTORIES ( ${Boost_INCLUDE_DIRS} )

INCLUDE_DIRECTORIES ( "source" )

SET ( CMAKE_CXX_FLAGS "-std=c++11 -g" )

ADD_SUBDIRECTORY ( source )
