CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

PROJECT ( AlgoVi )

SET ( INSTALL_BIN_DIR "bin" )
SET ( INSTALL_LIB_DIR "lib" )

SET ( CMAKE_AUTOMOC ON )
SET ( CMAKE_AUTOUIC ON )
SET ( CMAKE_INCLUDE_CURRENT_DIR ON )

FIND_PACKAGE ( Qt5Widgets REQUIRED )
FIND_PACKAGE ( Qt5Quick REQUIRED )
FIND_PACKAGE ( Qt5Core REQUIRED )
FIND_PACKAGE ( Qt5Network REQUIRED )
FIND_PACKAGE ( Qt5Xml REQUIRED )
FIND_PACKAGE ( Boost REQUIRED COMPONENTS filesystem system program_options )

set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
#set(Boost_USE_STATIC_RUNTIME ON)

INCLUDE_DIRECTORIES ( ${Boost_INCLUDE_DIRS} )

INCLUDE_DIRECTORIES ( "source" )
INCLUDE_DIRECTORIES ( "externalLibs" )

SET ( CMAKE_CXX_FLAGS "-std=c++11" )

IF ( "${ALGOVI_TARGET_NAME}" STREQUAL "win32" )
    SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWIN_TARGET" )
ENDIF ()

IF ( "${CMAKE_BUILD_TYPE}" STREQUAL "Release" )
   SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DQT_NO_DEBUG_OUTPUT" )
ENDIF ()

ADD_SUBDIRECTORY ( source )
ADD_SUBDIRECTORY ( externalLibs )
