
SET ( CMP_TWO_SIGNED_HUGE_INTEGERS "hcmp" )
ADD_EXECUTABLE ( ${CMP_TWO_SIGNED_HUGE_INTEGERS} "hcmp.cpp" )

SET ( CMP_TWO_SIGNED_INTEGERS "icmp" )
ADD_EXECUTABLE ( ${CMP_TWO_SIGNED_INTEGERS} "icmp.cpp" )

SET ( CMP_FILE_AS_SEQ_OF_TOKENS_IN_LINES "lcmp" )
ADD_EXECUTABLE ( ${CMP_FILE_AS_SEQ_OF_TOKENS_IN_LINES} "lcmp.cpp" )

SET ( CMP_ORDERED_SEQ_OF_SIGNED_INTEGERS "ncmp" )
ADD_EXECUTABLE ( ${CMP_ORDERED_SEQ_OF_SIGNED_INTEGERS} "ncmp.cpp" )

SET ( CMP_TWO_DOUBLES "rcmp" )
ADD_EXECUTABLE ( ${CMP_TWO_DOUBLES} "rcmp.cpp" )

SET ( CMP_SEQ_DOUBLES4 "rcmp4" )
ADD_EXECUTABLE ( ${CMP_SEQ_DOUBLES4} "rcmp4.cpp" )

SET ( CMP_SEQ_DOUBLES6 "rcmp6" )
ADD_EXECUTABLE ( ${CMP_SEQ_DOUBLES6} "rcmp6.cpp" )

SET ( CMP_SEQ_DOUBLES9 "rcmp9" )
ADD_EXECUTABLE ( ${CMP_SEQ_DOUBLES9} "rcmp9.cpp" )

SET ( CMP_SEQ_TOKENS "wcmp" )
ADD_EXECUTABLE ( ${CMP_SEQ_TOKENS} "wcmp.cpp" )

SET ( CMP_UNORDERED_SEQ_INT "uncmp" )
ADD_EXECUTABLE ( ${CMP_UNORDERED_SEQ_INT} "uncmp.cpp" )

SET ( CMP_YESNO "yesno" )
ADD_EXECUTABLE ( ${CMP_YESNO} "yesno.cpp" )

SET ( CHECKERS_INSTALL_DIR "checkers" )


INSTALL (
   TARGETS
        ${CMP_TWO_SIGNED_HUGE_INTEGERS}
        ${CMP_TWO_SIGNED_INTEGERS}
        ${CMP_FILE_AS_SEQ_OF_TOKENS_IN_LINES}
        ${CMP_ORDERED_SEQ_OF_SIGNED_INTEGERS}
        ${CMP_UNORDERED_SEQ_INT}
        ${CMP_TWO_DOUBLES}
        ${CMP_SEQ_DOUBLES4}
        ${CMP_SEQ_DOUBLES6}
        ${CMP_SEQ_DOUBLES9}
        ${CMP_SEQ_TOKENS}
        ${CMP_YESNO}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}/${CHECKERS_INSTALL_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}/${CHECKERS_INSTALL_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}/${CHECKERS_INSTALL_DIR}

)
