
FILE ( GLOB_RECURSE SOLVER_APPS_LIB_SOURCES
   "*.h"
   "*.cpp"
)

ADD_LIBRARY ( ${SOLVER_APPS_LIB_NAME} STATIC ${SOLVER_APPS_LIB_SOURCES})

FIND_PACKAGE ( Qt5Core REQUIRED )

QT5_USE_MODULES ( ${SOLVER_APPS_LIB_NAME} Core Widgets )

TARGET_LINK_LIBRARIES ( ${SOLVER_APPS_LIB_NAME}
   ${Boost_LIBRARIES}
)

INSTALL (
   TARGETS
   ${SOLVER_APPS_LIB_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)
