
FILE ( GLOB_RECURSE GRAVIZSETTINGS_LIB_SOURCES
   "*.h"
   "*.cpp"
)

ADD_LIBRARY ( ${GRAVIZSETTINGS_LIB_NAME} STATIC ${GRAVIZSETTINGS_LIB_SOURCES})

QT5_USE_MODULES ( ${GRAVIZSETTINGS_LIB_NAME} Core Xml )

TARGET_LINK_LIBRARIES ( ${GRAVIZSETTINGS_LIB_NAME}
   ${Boost_LIBRARIES}
)

INSTALL (
   TARGETS
      ${GRAVIZSETTINGS_LIB_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)
