
FILE ( GLOB_RECURSE ALGOVISETTINGS_LIB_SOURCES
   "*.h"
   "*.cpp"
)

ADD_LIBRARY ( ${ALGOVISETTINGS_LIB_NAME} STATIC ${ALGOVISETTINGS_LIB_SOURCES})

QT5_USE_MODULES ( ${ALGOVISETTINGS_LIB_NAME} Core Xml )

TARGET_LINK_LIBRARIES ( ${ALGOVISETTINGS_LIB_NAME}
   ${Boost_LIBRARIES}
)

INSTALL (
   TARGETS
      ${ALGOVISETTINGS_LIB_NAME}
   RUNTIME DESTINATION ${INSTALL_BIN_DIR}
   LIBRARY DESTINATION ${INSTALL_LIB_DIR}
   ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
)
